tests/fixtures/multi_module/invalid/cycle/b.furqan
// D9/D20 G2 fixture. Two-module cycle: A -> B -> A.

bismillah B {
    authority: NAMING_MD
    serves: purpose_hierarchy.balance_for_living_systems
    scope: b_side
    not_scope: nothing_excluded
}

tanzil b_deps {
    depends_on: A
}
